--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-app",
-  "homepage": "https://Smazhevskiy.github.io/contact-with-me-form",
+  "homepage": "https://Smazhevskiy.github.io/contactWithMeForm",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
